<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PopupBubble</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="button_click">点击</string>

    <string name="pop_layout_title">选择操作</string>
    <string name="button_copy">复制</string>
    <string name="button_note">笔记</string>
    <string name="button_correct">纠错</string>
    <string name="button_share">分享</string>

    <string name="button_copy_info">复制成功</string>
    <string name="button_note_info">收藏笔记成功</string>
    <string name="button_correct_info">纠错成功</string>
    <string name="button_share_info">分享成功</string>

</resources>
