<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout android:id="@+id/guard_layout"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:background="@drawable/bubble_background">
        <TextView
            android:id="@+id/remain_time_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="#0BABD1"
            android:textSize="14sp"
            android:text="@string/pop_layout_title"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <Button
                android:id="@+id/button_copy"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:text="@string/button_copy"
                android:textSize="12sp"
                android:background="@drawable/button_background"
                android:textColor="#FF000000"/>

            <Button
                android:id="@+id/button_note"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:text="@string/button_note"
                android:textSize="12sp"
                android:background="@drawable/button_background"
                android:textColor="#FF000000"/>

            <Button
                android:id="@+id/button_correct"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:text="@string/button_correct"
                android:textSize="12sp"
                android:background="@drawable/button_background"
                android:textColor="#FF000000"/>

            <Button
                android:id="@+id/button_share"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:text="@string/button_share"
                android:textSize="12sp"
                android:background="@drawable/button_background"
                android:textColor="#FF000000"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/point_top_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bubble_arrow_top"
        android:layout_marginTop="7dp"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/point_bottom_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/guard_layout"
        android:layout_marginTop="-17dp"
        android:visibility="visible"
        android:background="@drawable/bubble_arrow_bottom">
    </ImageView>

</RelativeLayout>